index: add mead section and Texas Mead
Signed-off-by: Dylan Turner <dylan.turner@tutanota.com>

--- a/index.html
+++ b/index.html
@@ -1530,6 +1530,204 @@
                     </div>
                 </div>
             </div>
+            <div class = 'section'>
+                <img src = './img/food/mead/texas-mead.jpg' />
+                <button type = 'button' class = 'collapsible'> ▶ Meads </button>
+                <div class = 'content'>
+                    <div class = 'recipe'>
+                        <div class = 'recipehdr'>
+                            <img src = './img/food/mead/texas-mead.jpg' />
+                            <div>
+                                <h1> Texas Mead </h1>
+                                <p>
+                                    A delicious drink made of Texas ingredients!
+
+                                    Flavor Profile: Smooth and sweet with floral notes, tart,
+                                    fruity depths, and a nutty, toasted complexity with
+                                    a crisp, clean terroir tying it all together.
+                                </p>
+                            </div>
+                        </div>
+                        <button type = 'button' class = 'collapsible'> ▶ View Recipe </button>
+                        <div class = 'content'>
+                            <p> Ingredients: </p>
+                            <ul>
+                                <li> 3 lbs Raw Texas Wildflower Honey (Get the Good Stuff!) </li>
+                                <li> 1 to 1.5 lbs Fresh Blackberries (I use 3x 6oz boxes) </li>
+                                <li> 1 to 1.5 lbs Prickly Pear Fruit (I used 4 fruites) </li>
+                                <li> 1-2 oz Pecan Wood Chips </li>
+                                <li> ½ to ¾ gallon Texas Spring Water (like Ozarka) </li>
+                                <li> 1 packet Wine Yeast (Lalvin EC-1118) </li>
+                                <li> 1 tbspn Sanitizer </li>
+                                <li> ½ + ½ tspn Yeast Nutrient </li>
+                                <li> 1 Small Mesh Bag to Hold Fruit </li>
+                                <li> ½ tspn Pectic Enzyme </li>
+                                <li> ½ tspn Bentonite Clay </li>
+                                <li> ½ tspn Potassium Sorbate </li>
+                                <li> ¼ tspn Potassium Metabisulfite </li>
+                            </ul>
+                            <p> Steps </p>
+                            <ol>
+                                <li>
+                                    Sanitize Equipment
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Add sanitizer to 1 gallon of water in container for
+                                            mead and wait 60s.
+                                        </li>
+                                        <li>
+                                            Pour into a bowl and let other equipment
+                                            (air lock, stopper, grad cylinder, funnel, etc)
+                                            also soak for 60s
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Prepare Fruit
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Scoop out prickly pear guts and put into mesh bag.
+                                            Also add rinsed blackberries.
+                                        </li>
+                                        <li>
+                                            Smash the fruit inside the back, catching any excess
+                                            juice.
+                                        </li>
+                                        <li>
+                                            Place fruit bag and juice into container for mead.
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Create Must
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Pour the 3lbs honey into jar. You won't get it all out
+                                            easily, and that's okay, it's accounted for.
+                                            Plan for 2.5 lbs to get in there!
+                                        </li>
+                                        <li>
+                                            Fill the container with warm spring water until it's
+                                            a gallon. Make sure to leave room for fermentation
+                                            to bubble up (like an inch from top) even if that puts
+                                            it a bit under a gallon.
+                                        </li>
+                                        <li>
+                                            Mix the honey <i> completely </i> into the water
+                                            forming must. I recommend a sanitized spoon to stir it.
+                                        </li>
+                                        <li> Dissolve the pectic enzyme in the must. </li>
+                                        <li> Let the pectic enzyme work for at least 12 hours </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Primary Fermentation
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            As per instructions on the packet, mix yeast with hot
+                                            water and stir for 20 min.
+                                        </li>
+                                        <li>
+                                            Add the ½ tbspn yeast nutrient to the must and shake
+                                            the container in a circle to mix.
+                                        </li>
+                                        <li>
+                                            Add yeast to must and seal with an air tight lid
+                                            (with airlock). Put it in a dark room at 65-75ºF
+                                            (room temp).
+                                        </li>
+                                        <li>
+                                            Let sit for 24 hours ("Day 2") then degass by opening
+                                            the lid, shaking it in a circle thoroughly for 2 minutes
+                                            to get rid of CO2.
+                                            Then return it to its fermentation area.
+                                        <li>
+                                        <li>
+                                            After 4 more days ("Day 5"), degass again and (slowly)
+                                            add the second dosing of yeast nutrient.
+                                            If you don't go slow it may bubble out of control and
+                                            make a mess! Add a bit, shake, add a bit, shake.
+                                            Return it to its fermentation area.
+                                        </li>
+                                        <li>
+                                            Check on it after 15 more days ("Day 20"). Check to see
+                                            if it's still bubbling. Check if the specific gravity
+                                            is near 1.000. If not, then periodically check after
+                                            another week.
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Wood Aging
+
+                                    <ol type = 'a'>
+                                        <li> Heat oven to 400ºF</li>
+                                        <li>
+                                            Siphon the mead to a new (sanitized) container,
+                                            leaving behind the solids.
+                                        </li>
+                                        <li>
+                                            Toast the wood chips on a baking sheet in a single
+                                            layer for about 25 minutes (don't let it burn though).
+                                        </li>
+                                        <li>
+                                            Soak the wood chips in boiling water for 10 minutes.
+                                        </li>
+                                        <li> Add the wood chips to the new container. </li>
+                                        <li>
+                                            Check the flavor after a week. If not quite there,
+                                            wait another week. Then proceed to stabilization.
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Stabilization and Bottling
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Siphon the mead in to the (resanitized) old container,
+                                            leaving behind the wood chips.
+                                        </li>
+                                        <li>
+                                            Slowly add the bentonite clay to ⅟4 boiling water.
+                                            Stir continuously until the mixture becomes smooth with
+                                            no clumps. Let it cool then mix into the mead.
+                                        </li>
+                                        <li> Add the Potassium Sorbate to the mead and mix in </li>
+                                        <li>
+                                            Wait 24 hrs (important!) then add the
+                                            Potassium Metabisulfite.
+                                        </li>
+                                        <li>
+                                            Wait 1-2 weeks for the mead to fully clear via the
+                                            clay.
+                                        </li>
+                                        <li>
+                                            (Optional) Add more honey to taste if you want it
+                                            sweeter (increments of a table spoon). You'll have to
+                                            wait a bit again after stirring.
+                                        </li>
+                                        <li> Siphon into sanitized bottles. </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    (Optional) Aging
+
+                                    <p>
+                                        Mead tastes best after aging for 3-6 months to develop
+                                        more complex flavors.
+                                    </p>
+                                </li>
+                                <li> Enjoy! </li>
+                            </ol>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div id = 'expand'></div>
     </body>
