--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class = 'content'>
                     <div class = 'recipe'>
                         <div class = 'recipehdr'>
-                            <img src = './img/food/savory/bread.jpg' />
+                            <img src = './img/food/savory/artisan-bread.jpg' />
                             <div>
                                 <h1> Artisan Bread </h1>
                                 <p>
@@ -45,9 +45,62 @@
                         <div class = 'content'>
                             <p> Ingredients: </p>
                             <ul>
+                                <li> 430g Bread Flour </li>
+                                <li> 6g Instant Yeast </li>
+                                <li> 9g Course Salt </li>
+                                <li> 360g Water </li>
                             </ul>
                             <p> Steps </p>
                             <ol>
+                                <li>
+                                    Mix the dough
+
+                                    <ol type = 'a'>
+                                        <li> Whisk flour, yeast, and salt in a large bowl </li>
+                                        <li> Pour in the water and mix with a spoon </li>
+                                        <li> Work the dough until it is just barely dry </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Rise
+
+                                    <ol type = 'a'>
+                                        <li> Cover the dough with plastic wrap and a towel </li>
+                                        <li>
+                                            Let rise for 2-3 hours. The dough will double in size
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Prepare to Bake
+
+                                    <ol type = 'a'>
+                                        <li> Preheat the oven to 475 ⁰F </li>
+                                        <li> Cut the dough in half with a sharp knife </li>
+                                        <li>
+                                            Begin to work the dough, rolling out into footlong
+                                            tubes
+                                        </li>
+                                        <li> Place on a floured baking sheet </li>
+                                        <li>
+                                            Score the bread with slashes down the middle
+                                            about ½" deep
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Bake
+
+                                    <ol type = 'a'>
+                                        <li> PLace into oven </li>
+                                        <li>
+                                            Bake for 20-25 minutes until the crust is golden brown
+                                        </li>
+                                        <li>
+                                            Remove from oven and let cool for at least 20 minutes
+                                        </li>
+                                    </ol>
+                                </li>
                                 <li> Enjoy! </li>
                             </ol>
                         </div>
