index: fill in fettucine alfredo (minus pic)
Signed-off-by: Dylan Turner <dylan.turner@tutanota.com>

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                     </div>
                     <div class = 'recipe'>
                         <div class = 'recipehdr'>
-                            <img src = './img/food/savory/bread.jpg' />
+                            <img src = './img/food/savory/fettucine-alfredo.jpg' />
                             <div>
                                 <h1> Fettucine Alfredo with Steak </h1>
                                 <p>
@@ -253,9 +253,111 @@
                         <div class = 'content'>
                             <p> Ingredients: </p>
                             <ul>
+                                <li> 1 and 1 tbsp Olive Oil </li>
+                                <li> 2 cups Spinach </li>
+                                <li> 1 tspn Dried Parsely </li>
+                                <li> ½ tspn Dried Basil </li>
+                                <li> ½ tspn Onion Powder </li>
+                                <li> ¼ tspn Salt </li>
+                                <li> ¼ tspn Dried Oregano </li>
+                                <li> ¼ tspn Thyme</li>
+                                <li> ¼ tspn Ground Sage </li>
+                                <li> ½ cup Sherry Wine </li>
+                                <li> 3 tbsp Salted Butter </li>
+                                <li> 2 tbsp Minced Shallots </li>
+                                <li> 1 clove Minced Garlic </li>
+                                <li> 2 tbsp Flour </li>
+                                <li> 1 cup Heavy Cream </li>
+                                <li> 1 cup Chicken Broth </li>
+                                <li> 1 tspn Worcestershire sauce </li>
+                                <li> 1 tspn Dijon Mustard </li>
+                                <li> ¾ cup Grated Parmesan Cheese </li>
+                                <li> ¾ lb Fettucine </li>
+                                <li> 1 Prime Ribeye </li>
                             </ul>
                             <p> Steps </p>
                             <ol>
+                                <li>
+                                    Cook the Spinach
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Heat 1 tbsp olive oil in a larg skillet
+                                            over medium-high heat and let warm
+                                        </li>
+                                        <li> Add the spinach and sprinkle some salt </li>
+                                        <li>
+                                            Sauté for a few minuts, until the spinach is wilted
+                                        </li>
+                                        <li> Set aside the Spinach for later </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Cook the Steak
+
+                                    <ol type = 'a'>
+                                        <li> Follow along my steak recipe </li>
+                                        <li>
+                                            After waiting the 5 minutes at the end of cooking the
+                                            steak, slice and dice the steak into small chunks to
+                                            be mixed with the pasta
+                                        </li>
+                                        <li>
+                                            Leave steaks wrapped in foil or in oven at a low temp
+                                            to keep warm while you cook the rest
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Make the Alfredo Sauce and Pasta
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Combine the heavy cream, chicken broth, Worcester sauce,
+                                            Dijon, parsely, basil, onion powder, salt, dried
+                                            oregano, thyme, and sage in a small bowl and set aside
+                                        </li>
+                                        <li>
+                                            Begin boiling a pot of water for the pasta.
+                                            When a boil is reached, add in a bit of salt, based
+                                            on box (½ tbsp course salt, for instance)
+                                        </li>
+                                        <li>
+                                            Dab away most excess oil from the skillet, but leave
+                                            behind brown bits
+                                        </li>
+                                        <li> Add wine, garlic, and shallots to the skillet </li>
+                                        <li>
+                                            Set heat to medium and scrape and stir for 3-4 minutes
+                                        </li>
+                                        <li> Drain away half of the liquid. </li>
+                                        <li>
+                                            Melt the butter and add the flour and cook until
+                                            it begins to brown (about 2 minutes)
+                                        </li>
+                                        <li> Add the heavy-cream and seasoning mixture </li>
+                                        <li> Bring sauce to a boil then reduce to simmer </li>
+                                        <li>
+                                            Simmer partially covered while you cook the pasta
+                                            al dente based on the box
+                                        </li>
+                                        <li>
+                                            Reduce heat of sauce to low and gradually stir in
+                                            parmesan
+                                        </li>
+                                        <li>
+                                            Use tongs to add the pasta gradually and toss to
+                                            combine
+                                        </li>
+                                    </ol>
+                                <li>
+                                    Combine
+
+                                    <ol type = 'a'>
+                                        <li> Add the spinach, followed by the steak </li>
+                                        <li> Heat for a few more minutes partially covered </li>
+                                    </ol>
+                                </li>
                                 <li> Enjoy! </li>
                             </ol>
                         </div>
