index: filled-in brownie recipe
Signed-off-by: Dylan Turner <dylan.turner@tutanota.com>

--- a/index.html
+++ b/index.html
@@ -1180,6 +1180,83 @@
                 <div class = 'content'>
                     <div class = 'recipe'>
                         <div class = 'recipehdr'>
+                            <img src = './img/food/sweet/brownies.jpg' />
+                            <div>
+                                <h1> Brownies </h1>
+                                <p>
+                                    The best fudgy chocolate brownies you'll ever have
+                                </p>
+                            </div>
+                        </div>
+                        <button type = 'button' class = 'collapsible'> ▶ View Recipe </button>
+                        <div class = 'content'>
+                            <p> Ingredients: </p>
+                            <ul>
+                                <li> 1½ cups Granulated Sugar </li>
+                                <li> ¾ cup All-Purpose Flour </li>
+                                <li> ⅔ cup Dutch-Process Cocoa Powder (get the good stuff!) </li>
+                                <li>
+                                    ½ cup Dark Chocolate Chips (again, get the good stuff here!)
+                                </li>
+                                <li> ½ cup Powdered Sugar </li>
+                                <li> ¾ tspn Sea Salt </li>
+                                <li> 2 Large Eggs </li>
+                                <li> ½ cup Olive Oil (get the good stuff here as well) </li>
+                                <li> 2 tbsp Water </li>
+                                <li> ½ tspn Vanilla </li>
+                            </ul>
+                            <p> Steps </p>
+                            <ol>
+                                <li>
+                                    Prepare
+
+                                    <ol type = 'a'>
+                                        <li> Preheat oven to 325 ⁰F </li>
+                                        <li> Spray cooking spray on an 8x8 baking dish </li>
+                                        <li> Line the dish with parchment paper </li>
+                                        <li> Spray that with parchment paper as well </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Mix the dough
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Mix sugar, flour, cocoa powder, powdered sugar,
+                                            chocolate chips, and salt in a medium bowl
+                                        </li>
+                                        <li>
+                                            Whisk eggs, olive oil, water, and vanilla together in
+                                            a large bowl
+                                        </li>
+                                        <li>
+                                            Sprinkle dry mix over the wet mix and stir until just
+                                            combined
+                                        </li>
+                                        <li>
+                                            Pour the batter into your baking dish and smooth it out.
+                                            It is a very thick mixture
+                                        </li>
+                                    </ol>
+                                    <li>
+                                        Bake
+
+                                        <ol type = 'a'>
+                                            <li> Bake for 40 to 48 minutes </li>
+                                            <li>
+                                                Test for doneness by poking with a toothpick.
+                                                If it comes out clean, it's done
+                                            </li>
+                                            <li> COOL COMPLETELY BEFORE SLICING </li>
+                                        </ol>
+                                    </li>
+                                </li>
+                                <li> Enjoy! </li>
+                            </ol>
+                        </div>
+                    </div>
+                    <div class = 'recipe'>
+                        <div class = 'recipehdr'>
                             <img src = './img/food/sweet/croissants.jpg' />
                             <div>
                                 <h1> Chocolate Croissants </h1>
