index: filled-in croissant recipe
Signed-off-by: Dylan Turner <dylan.turner@tutanota.com>

--- a/index.html
+++ b/index.html
@@ -1261,7 +1261,8 @@
                             <div>
                                 <h1> Chocolate Croissants </h1>
                                 <p>
-                                    A flakey and light desert that is a major crowd-pleaser
+                                    A flakey and light desert that is a major crowd-pleaser.
+                                    Note: Takes 2-3 days
                                 </p>
                             </div>
                         </div>
@@ -1269,9 +1270,202 @@
                         <div class = 'content'>
                             <p> Ingredients: </p>
                             <ul>
+                                <li> 4 tbsp + 1½ cups Unsalted Butter (Softened) </li>
+                                <li> 4 cups + 2 tbsp All-Purpose Flour </li>
+                                <li> ¼ cup Granulated Sugar </li>
+                                <li> 2 tspn Salt </li>
+                                <li> 1 tbsp Active Dry Yeast </li>
+                                <li> 1½ cups + 2 tbsp Cold Whole Milk </li>
+                                <li>
+                                    1 bar Dark Chocolate (get the good stuff like Ghirardelli)
+                                </li>
+                                <li> Confectioner's Sugar for Dusting </li>
+                                <li> 1 Large Egg </li>
                             </ul>
                             <p> Steps </p>
                             <ol>
+                                <li>
+                                    Make the Dough
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Cut the ¼ cup of butter into four 1 tbspn slices
+                                            and place in a bowl
+                                        </li>
+                                        <li> Add the 4 cups flour, the sugar, salt, and yeast </li>
+                                        <li> Combine ingredients until well mixed </li>
+                                        <li>
+                                            Slowly pour in the 1½ cups milk and continue to stir
+                                        </li>
+                                        <li> Mix until combined and ready to knead </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Knead the Dough
+
+                                    <ol type = 'a'>
+                                        <li> Knead the dough by hand </li>
+                                        <li>
+                                            If too sticky, add a bit of flour. If too dry add a bit
+                                            of water
+                                        </li>
+                                        <li>
+                                            You'll know it's ready if when you poke it, it slowly
+                                            comes back into place
+                                        </li>
+                                        <li>
+                                            Work it into a ball and place on parchment paper on a
+                                            baking sheet. Gently flatten out a bit, then store in
+                                            the fridge for 30 minutes to rest.
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Shape the Dough
+
+                                    <ol type = 'a'>
+                                        <li> Remove dough from the fridge </li>
+                                        <li> Roll out thin into a 14"x10" rectangle </li>
+                                        <li>
+                                            Use a ruler. This rectangle must be very precise with
+                                            nice corners.
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Long Rest
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Place the rolled dough back onto parchment paper on the
+                                            baking sheet
+                                        </li>
+                                        <li>
+                                            Cover the rolled out dough with plastic wrap or
+                                            aluminum foil
+                                        </li>
+                                        <li>
+                                            Place back in the fridge for at least 4 hours
+                                            or up to 24 hours. I recommend just waiting the four
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Butter Layer
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Mix the 1½ cups butter and 2 tbsp flour in a large bowl
+                                        </li>
+                                        <li> Beat until smooth and combined </li>
+                                        <li>
+                                            Smooth out the mixture into a 7"x10" rectangle on a
+                                            piece of parchment paper on a baking sheet.
+                                        </li>
+                                        <li>
+                                            Let the butter layer chill and harden in the fridge for
+                                            30 min
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Laminate the dough
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Pull out the dough and butter layer from the fridge
+                                        </li>
+                                        <li> Place butter layer in the middle of the dough </li>
+                                        <li> Seal the dough edges over the butter layer </li>
+                                        <li>
+                                            Roll out the dough into a 10"x20" rectangle.
+                                            Use a ruler as this must be precise
+                                        </li>
+                                        <li> Fold lengthwise into thirds like a letter </li>
+                                        <li>
+                                            Turn the short side towards you and roll again into
+                                            10"x20". We are putting layers into the dough which
+                                            alternate butter and dough.
+                                        </li>
+                                        <li> Fold into a third of the size again </li>
+                                        <li> Place back in fridge, covered, for 30 min </li>
+                                        <li>
+                                            Take out and roll into a 10"x20" rectangle then fold
+                                            one more time
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Second Long Rest
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Wait 4-24 hrs. I recommend this being where you put
+                                            your day-long break if needed, as the next step is
+                                            fairly short.
+                                        </li>
+                                        <li>
+                                            At some point before this, chop your chocolate into
+                                            thin strips
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Shape Croissants
+
+                                    <ol type = 'a'>
+                                        <li> Preheat the oven to 400 ⁰F </li>
+                                        <li>
+                                            Remove the dough from the fridge and roll out
+                                            into an 8"x20" rectangle this time
+                                        </li>
+                                        <li>
+                                            Cut the dough into four vertically and four
+                                            horizontally, so you have 16 2"x5" rectangles
+                                        </li>
+                                        <li>
+                                            Take one rectangle and roll out into roughly an 8" long
+                                            rectangle
+                                        </li>
+                                        <li>
+                                            Place a bit of chocolate at one end of the rectangle
+                                            and roll tightly
+                                        </li>
+                                        <li>
+                                            Place on parchment paper on a baking sheet with the
+                                            flap of the roll facing down, so it doesn't unroll
+                                            while baking
+                                        </li>
+                                        <li> Repeat c-e for all the 2"x5" rectangles </li>
+                                        <li>
+                                            Let the croissants rest at room temp for 1 hour.
+                                            Then place back in the fridge for 30 min to an hour
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Bake
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Make an egg wash by mixing the egg and 2 tbsp of whole
+                                            milk
+                                        </li>
+                                        <li>
+                                            Lightly brush each croissant with an egg wash brush
+                                        </li>
+                                        <li>
+                                            Bake the croissants until golden brown, about 20 min.
+                                            Rotate halfway through. If they brown too quickly,
+                                            reduce to 375 ⁰F at the halfway point
+                                        </li>
+                                        <li>
+                                            Remove from the oven and cool on a wire rack for a few
+                                            minutes
+                                        </li>
+                                        <li> Lightly dust with confectioner's sugar </li>
+                                    </ol>
+                                </li>
                                 <li> Enjoy! </li>
                             </ol>
                         </div>
