index: filled-in chocolates recipe
Signed-off-by: Dylan Turner <dylan.turner@tutanota.com>

--- a/index.html
+++ b/index.html
@@ -1484,9 +1484,34 @@
                         <div class = 'content'>
                             <p> Ingredients: </p>
                             <ul>
+                                <li> ½ cup Coconut Oil </li>
+                                <li> ½ cup Cocoa Powder </li>
+                                <li> 3 tbsp Honey </li>
+                                <li> ½ tspn Vanilla </li>
                             </ul>
                             <p> Steps </p>
                             <ol>
+                                <li>
+                                    Melt and Mix
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Melt coconut oil in a saucepan over medium-low heat
+                                        </li>
+                                        <li>
+                                            Stir cocoa powder, honey, and vanilla into until well
+                                            blended
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Shape and Chill
+
+                                    <ol type = 'a'>
+                                        <li> Pour into a mold or an ice-cube tray </li>
+                                        <li> Place into fridge until chilled (at least 1 hr) </li>
+                                    </ol>
+                                </li>
                                 <li> Enjoy! </li>
                             </ol>
                         </div>
